# CloudComputing2024

./: Makefile  README.md  docker-compose.yaml
api/: Dockerfile  README.md  docker-entrypoint.sh  pyproject.toml
api/src/: main.py
api/src/api/: app.py  router.py
api/src/database/: connector.py  database.py
api/src/models/: user.py
mysql/: mysql.env
task1/: Makefile  README.md
task1/api/: Dockerfile  docker-entrypoint.sh
task1/api/src/models/: user.py
task1/mysql/: Dockerfile
task1/mysql/database/: create_table.sql
task2/: Makefile  README.md  api  mysql
task2/kube-configs/: api-deployment.yaml  api-service.yaml  mysql-deployment.yaml  mysql-service.yaml  mysql-v-persistentvolumeclaim.yaml
